correción al agregar usuario en el post

--- a/app/src/main/res/layout/activity_create_post.xml
+++ b/app/src/main/res/layout/activity_create_post.xml
@@ -39,7 +39,7 @@
                 android:layout_marginHorizontal="20dp"
                 android:layout_marginBottom="20dp"
                 android:layout_marginTop="10dp"
-                android:hint="Titulo de la publicación:"
+                android:hint="Titulo de la publicación"
                 app:boxBackgroundColor="#FFFFFF"
 
                 app:startIconDrawable="@drawable/user_icon"
@@ -105,6 +105,7 @@
                 app:startIconTint="@color/primary_color">
 
                 <com.google.android.material.textfield.TextInputEditText
+                    style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                     android:id="@+id/etDescripcion"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
@@ -158,7 +159,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="10dp"
 
-                android:layout_marginBottom="20dp"
+                android:layout_marginBottom="5dp"
                 android:backgroundTint="#FFF"
 
                 android:text="Publicar"
@@ -175,7 +176,7 @@
             <TextView
                 android:id="@+id/txtUrlImage"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="9dp"
                 android:clickable="true"
                 android:text="TextView"
                 android:visibility="invisible" />
