Solucionado - Ahora se muestra la direccion colocada en el post y no la direccion del usuario

--- a/app/src/main/res/layout/layout_post.xml
+++ b/app/src/main/res/layout/layout_post.xml
@@ -57,7 +57,7 @@
                     android:textSize="14dp" />
 
                 <TextView
-                    android:id="@+id/cardUserAddress"
+                    android:id="@+id/cardPostAddress"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="Apopa, San Salvador"
