Agregado - Toolbar en la actividad de crear post y Agregada - Funcionalidad para obtener cantidad de likes en un post

--- a/app/src/main/res/layout/layout_post.xml
+++ b/app/src/main/res/layout/layout_post.xml
@@ -134,6 +134,7 @@
             android:orientation="horizontal">
 
             <Button
+                android:id="@+id/cardLikeButton"
                 style="?android:attr/borderlessButtonStyle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -148,6 +149,7 @@
                 app:iconTint="@color/primary_color" />
 
             <Button
+                android:id="@+id/cardCommentButton"
                 style="?android:attr/borderlessButtonStyle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
