--- a/app/src/main/res/layout/activity_create_post.xml
+++ b/app/src/main/res/layout/activity_create_post.xml
@@ -11,7 +11,7 @@
     tools:context=".UserActivity">
 
     <androidx.appcompat.widget.Toolbar
-        android:id="@+id/userToolbar"
+        android:id="@+id/createPostToolbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/primary_color_700"
