--- a/app/src/main/res/layout/layout_post.xml
+++ b/app/src/main/res/layout/layout_post.xml
@@ -67,28 +67,35 @@
             </LinearLayout>
         </LinearLayout>
 
-        <TextView
-            android:id="@+id/cardPostTitle"
+        <LinearLayout
+            android:id="@+id/cardClickableSection"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="10dp"
-            android:paddingHorizontal="10dp"
-            android:text="Título del Post"
-            android:textColor="#212121"
+            android:orientation="vertical"
+            >
+            <TextView
+                android:id="@+id/cardPostTitle"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="10dp"
+                android:paddingHorizontal="10dp"
+                android:text="Título del Post"
+                android:textColor="#212121"
 
-            android:textSize="25dp"
-            android:textStyle="bold" />
+                android:textSize="25dp"
+                android:textStyle="bold" />
 
-        <TextView
-            android:id="@+id/cardPostDescription"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="20dp"
-            android:paddingHorizontal="10dp"
-            android:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor"
+            <TextView
+                android:id="@+id/cardPostDescription"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="20dp"
+                android:paddingHorizontal="10dp"
+                android:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor"
 
-            android:textColor="#212121"
-            android:textSize="16dp" />
+                android:textColor="#212121"
+                android:textSize="16dp" />
+        </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
