Solucionado - Crasheo de la app al eliminar un post

--- a/app/src/main/res/layout/activity_post.xml
+++ b/app/src/main/res/layout/activity_post.xml
@@ -293,7 +293,8 @@
                         android:layout_weight="1"
 
                         app:startIconDrawable="@drawable/comment_icon"
-                        app:startIconTint="@color/black">
+                        app:startIconTint="@color/black"
+                        app:endIconMode="clear_text">
 
                         <com.google.android.material.textfield.TextInputEditText
                             android:id="@+id/editTextComment"
